--- a/davaleba-01/davaleba01--for30.05.html
+++ b/davaleba-01/davaleba01--for30.05.html
@@ -7,7 +7,7 @@
     <title>დავალება 1</title>
 </head>
 <body>
-    <img src="/davaleba-01/images/exampleMap.jpg" alt="კამპუსის რუკა" style="float: left; margin: 0 50px;">
+    <img src="images\exampleMap.jpg" alt="კამპუსის რუკა" style="float: left; margin: 0 50px;">
 
     <div>
         <h1>დავალება #1</h1>
@@ -15,7 +15,7 @@
         <p style="color: red;">1. მოედანზე <small style="color: black;">(წითელ კვადრატში მოქცეულ არეალზე)</small> კლიკის დროს უნდა გაიხსნას რამე ვებგვერდი თქვენი გემოვნებით (სპორტთან დაკავშირებული). <small style="color: black;">დახაზული ფოტოს ნაცვლად შეგიძლიათ გამოიყენოთ იგივე ფოტო ამავე ფოლდერიდან, რომელიც არის კვადრატების და წრის გარეშე.</small></p>
         <hr>
         <p style="color: rgb(1, 177, 1);">2. ავტობუსზე <small style="color: black;">(მწვანე კვადრატში მოქცეულ არეალზე)</small> კლიკის დროს უნდა გაიხსნას თქვენს მიერ შექმნილი სხვა html ფაილი სახელად ganrigi.html, რომელშიც იქნება დაულაგებელ ლისტში მოქცეული დალაგებული ლისტი. მაგ.:</p>
-        <img src="/davaleba-01/images/exampleList.png" alt="list example" width="250px">
+        <img src="images\exampleList.png" alt="list example" width="250px">
         <p style="color: rgb(1, 177, 1);">ამ html ფაილში უნდა იყოს საწყის ფაილზე დასაბრუნებელი ლინკი. ლისთი შეგიძლიათ დაასათაუროთ და გააფორმოთ ბორდერებით და ფერებით. სტილი გაუწერეთ html ფაილშივე (ცალკე css ფაილის შექმნის გარეშე)</p>
         <hr>
         <p style="color: blue;">3. ტბაზე <small style="color: black;">(ლურჯ წრეში მოქცეულ არეალზე)</small> კლიკის დროს გაიხსნას html ფაილი სახელად tba.html, რომელთანაც დაკავშირებული იქნება tba.css ფაილი სტილებით.
