--- a/davaleba-02/davaleba02--for02.06.html
+++ b/davaleba-02/davaleba02--for02.06.html
@@ -7,7 +7,7 @@
     <title>დავალება #2</title>
 </head>
 <body>
-    <h1 style="color: lightseagreen; text-align: center; margin: 100px 0 50px;">დავალება #2 <sup style="font-size: 18px; font-weight: 100;">deadline - 02/06</sup></h1>
+    <h1 style="color: lightseagreen; text-align: center; margin: 100px 0 50px;">დავალება #2 <sup style="font-size: 18px; font-weight: 100; color: rgb(241, 65, 65);">deadline - 02/06</sup></h1>
     <ol style="font-size: 20px; line-height: 40px;">
         <li>გადადით <a style="color: rgb(26, 219, 8); font-weight: bold;" href="https://twitter.com/login" target="_blank">ლინკზე</a> და ეცადეთ ააგოთ მსგავსი ვიზუალის ავტორიზაციის გვერდი.</li>
         <li>Log In ღილაკზე დაჭერის შემდეგ ქვედა წარწერის <sub style="font-size: 14px;">(Forgot password? Sign up for Twitter)</sub> შემდეგ გაჩნდეს ტექსტი >>> <span style="color: rgb(9, 156, 21); font-weight: bold;">Successfully logged in</span></li>
