insert classwork github link

--- a/davaleba-03/დავალება03--for06.06.html
+++ b/davaleba-03/დავალება03--for06.06.html
@@ -9,7 +9,7 @@
 <body>
     <h1 style="color: lightseagreen; text-align: center; margin: 100px 0 50px;">დავალება #3 <sup style="font-size: 18px; font-weight: 100; color: rgb(241, 65, 65);">deadline - 06/06</sup></h1>
     
-    <ol style="font-size: 20px; line-height: 40px;">
+    <ol style="font-size: 20px; line-height: 40px; margin-bottom: 100px;">
         <li>გადადით <a style="color: rgb(26, 219, 8); font-weight: bold;" href="https://www.messenger.com/" target="_blank">ლინკზე</a> და ეცადეთ ააგოთ მსგავსი ვიზუალის ავტორიზაციის გვერდი.</li>
         <li>ქვემოთ მოცემული ლინკების საშუალებით გადახვალთ display: flex და display: grid სავარჯიშო თამაშებზე</li>
         <ol type="A">
@@ -19,5 +19,7 @@
             <li><a href="https://cssgridgarden.com/" style="color: lightseagreen;">Grid</a> ლინკი</li>
         </ol>
     </ol>
+
+    <h6 style="display: inline; margin: 50px; padding: 10px; color: orangered; border: 5px double olivedrab;">საკლასო სამუშაოების <a href="https://github.com/nino207/pythagora_MJ" target="_blank">ლინკი</a></h6>
 </body>
 </html>
