update links to _blank

--- a/davaleba-03/დავალება03--for06.06.html
+++ b/davaleba-03/დავალება03--for06.06.html
@@ -13,10 +13,10 @@
         <li>გადადით <a style="color: rgb(26, 219, 8); font-weight: bold;" href="https://www.messenger.com/" target="_blank">ლინკზე</a> და ეცადეთ ააგოთ მსგავსი ვიზუალის ავტორიზაციის გვერდი.</li>
         <li>ქვემოთ მოცემული ლინკების საშუალებით გადახვალთ display: flex და display: grid სავარჯიშო თამაშებზე</li>
         <ol type="A">
-            <li><a href="https://flexboxfroggy.com/" style="color: indianred;">Flex</a> ლინკი</li>
-            <li><a href="http://www.flexboxdefense.com/" style="color: indianred;">Flex</a> მე-2 ლინკი</li>
-            <li><a href="https://preview.webflow.com/preview/flexbox-game?preview=d1a26b027c4803817087a91c651e321f&m=1" style="color: indianred;">Flex</a> მე-3 ლინკი</li>
-            <li><a href="https://cssgridgarden.com/" style="color: lightseagreen;">Grid</a> ლინკი</li>
+            <li><a href="https://flexboxfroggy.com/" target="_blank" style="color: indianred;">Flex</a> ლინკი</li>
+            <li><a href="http://www.flexboxdefense.com/" target="_blank" style="color: indianred;">Flex</a> მე-2 ლინკი</li>
+            <li><a href="https://preview.webflow.com/preview/flexbox-game?preview=d1a26b027c4803817087a91c651e321f&m=1" target="_blank" style="color: indianred;">Flex</a> მე-3 ლინკი</li>
+            <li><a href="https://cssgridgarden.com/" target="_blank" style="color: lightseagreen;">Grid</a> ლინკი</li>
         </ol>
     </ol>
 
