change link to hw design

--- a/davaleba-05/დავალება05--for13.06.html
+++ b/davaleba-05/დავალება05--for13.06.html
@@ -12,7 +12,7 @@
     <h1 style="color: lightseagreen; text-align: center; margin: 50px 0;">დავალება #5 <sup style="font-size: 18px; font-weight: 100; color: rgb(241, 65, 65);">deadline - 13/06</sup></h1>
     
     <ol style="font-size: 20px; line-height: 40px;">
-        <li>გადადით <a style="color: rgb(26, 219, 8); font-weight: bold;" href="https://www.tsu.ge/ka" target="_blank">ლინკზე</a>, იქვე დააკლიკეთ <p class="btn btn-success">LIVE DEMO</p>-ს და ეცადეთ ბუტსტრაპის დახმარებით ააგოთ მოცემული ვებგვერდის შემდეგი ნაწილები:</li>
+        <li>გადადით <a style="color: rgb(26, 219, 8); font-weight: bold;" href="https://www.free-css.com/free-css-templates/page268/devfolio" target="_blank">ლინკზე</a>, იქვე დააკლიკეთ <p class="btn btn-success">LIVE DEMO</p>-ს და ეცადეთ ბუტსტრაპის დახმარებით ააგოთ მოცემული ვებგვერდის შემდეგი ნაწილები:</li>
         <ul style="color: rgb(117, 0, 0); font-size: 18px;">
             <li>ნავიგაცია, რომელიც სულ თან დაყვება კონტენტს ანუ fixed navbar;</li>
             <li>გამოცდილების ნაწილი პროცენტული პროგრესის მაჩვენებლებით. ანუ აქ დაგჭირდებათ progress bar ბუტსტრაპიდან და შეგიძლიათ დიზაინისგან განსხვავებული პროცენტები დასვათ; <a style="font-size: 14px;" href="https://drive.google.com/file/d/1IKMhaKwTqhun8nlwFlwxGtm9-CReYwMo/view?usp=sharing" target="_blank">დიზაინის ფოტო</a></li>
