--- a/davaleba-05/დავალება05--for13.06.html
+++ b/davaleba-05/დავალება05--for13.06.html
@@ -31,3 +31,5 @@
         <p style="color: orangered;">საკლასო სამუშაოების <a href="https://github.com/nino207/pythagora_MJ" target="_blank">ლინკი</a></p>
         <p style="color: orange;">დავალებების პროგრესის <a href="https://docs.google.com/spreadsheets/d/14pomGTdsV_lfPtx34fR9KYht20NIBZr6SMxQcQKZk_I/edit?usp=sharing" target="_blank">ლინკი</a></p>
     </div>
+</body>
+</html>
