--- a/davaleba-06/დავალება06--for16.06.html
+++ b/davaleba-06/დავალება06--for16.06.html
@@ -16,7 +16,7 @@
             <p style="width: 1000px;">უნდა შევადაროთ ერთმანეთს ორი სახეობის ხილის მარაგების საერთო ღირებულებები. ერთი იყოს მარწყვი, ხოლო მეორე კივი. დავუშვათ, კივის ღირებულება x-ჯერ მეტია მარწყვის ღირებულებაზე.
                 <ul style="font-size: 16px;">
                     <li>მაგალითად, მარწყვი თუ ღირს 10ლარი, და კივი მასზე 2-ჯერ ძვირია, ანუ ამ ინფორმაციაზე დაყრდნობით უნდა გამოვთვალოთ კივის ღირებულება;</li>
-                    <li>თუ მაღაზიაში მარწყვის რაოდენობა არის 10კგ, ხოლო კივის 2კგ, უნდა გამოთვალოთ ჯერ მარწყვის მარაგის საერთო რაოდენობა, შემდეგ კივის, და შემდეგ შეადაროთ ისინი ერთმანეთს.
+                    <li>პირობიტად, თუ მომხმარებელმა შეიყვანა შემდეგი მონაცამები, რის მიხედბიტაც მაღაზიაში მარწყვის რაოდენობა არის 10კგ, ხოლო კივის 2კგ, - ანუ უნდა გამოთვალოთ ჯერ მარწყვის მარაგის საერთო რაოდენობა, შემდეგ კივის, და შემდეგ შეადაროთ ისინი ერთმანეთს.
                         <ol>
                             <li>თუ მარწყვის მარაგის საერთო ღირებულება აღემატება კივის მარაგის საერთო ღირებულებას, მაშინ დაიბეჭდოს შეტყობინება: 
                                 <br>
