--- a/davaleba-08/დავალება08--for27.06.html
+++ b/davaleba-08/დავალება08--for27.06.html
@@ -20,8 +20,16 @@
                 <li>რომელია მის მიერ შექმნილ მასივში შუა ელემენტის ინდექსი და თვითონ ამ ინდექსზე მოთავსებული ელემენტიც;</li>
                 <li>მასივის პირველი და ბოლო ელემენტის კვადრატების ჯამი.</li>
             </ol>
-            <span style="font-size: 14px; color: lightseagreen; display: block; margin-top: 50px;">შედეგის საჩვენებლად შეგიძლიათ გამოიყენოთ როგორც alert, ასევე - innerHTML.</span>
-            <span style="font-size: 14px; color: mediumslateblue;">ჯავასკრიპტის ფუნქცია შექმენით ცალკე ფაილში.</span>
+            <div style="line-height: 10px;">
+                <p style="font-size: 14px; color: lightseagreen; margin-top: 40px;">შედეგის საჩვენებლად შეგიძლიათ გამოიყენოთ როგორც alert, ასევე - innerHTML.</p>
+                <p style="font-size: 14px; color: mediumslateblue;">ჯავასკრიპტის ფუნქცია შექმენით ცალკე ფაილში.</p>
+            </div>
+        </li>
+        <hr style="border-top: 10px groove red;">
+        <li>
+            შემოიტანეთ რაიმე ფოტო თქვენი გემოვნებით; 
+            <br>
+            ფოტოზე დაკლიკებისას გამოჩნდეს და ისევ დაკლიკებისას დაიმალოს ამ ფოტოს აღწერა ან სხვა რამე შემთხვევითი ტექსტი.
         </li>
     </ul>
 
