--- a/davaleba-08/დავალება08--for27.06.html
+++ b/davaleba-08/დავალება08--for27.06.html
@@ -20,12 +20,12 @@
                 <li>რომელია მის მიერ შექმნილ მასივში შუა ელემენტის ინდექსი და თვითონ ამ ინდექსზე მოთავსებული ელემენტიც;</li>
                 <li>მასივის პირველი და ბოლო ელემენტის კვადრატების ჯამი.</li>
             </ol>
-            <div style="line-height: 10px;">
+            <div">
                 <p style="font-size: 14px; color: lightseagreen; margin-top: 40px;">შედეგის საჩვენებლად შეგიძლიათ გამოიყენოთ როგორც alert, ასევე - innerHTML.</p>
-                <p style="font-size: 14px; color: mediumslateblue;">ჯავასკრიპტის ფუნქცია შექმენით ცალკე ფაილში.</p>
+                <p style="font-size: 14px; color: mediumslateblue; margin-top: -20px;">ჯავასკრიპტის ფუნქცია შექმენით ცალკე ფაილში.</p>
             </div>
         </li>
-        <hr style="border-top: 10px groove red;">
+        <hr style="border-top: 10px groove red; width: 90%;">
         <li>
             შემოიტანეთ რაიმე ფოტო თქვენი გემოვნებით; 
             <br>
