--- a/davaleba-10/დავალება10--for04.07.html
+++ b/davaleba-10/დავალება10--for04.07.html
@@ -28,6 +28,9 @@
                 <p style="font-size: 14px; color: mediumslateblue; margin-top: -20px;">ჯავასკრიპტის ფუნქცია შექმენით ცალკე ფაილში.</p>
             </div>
         </li>
+        <br>
+        <hr>
+        <li>p.s. >>> <span style="color: red;">kind REMINDER</span> >>> <span style="color: seagreen; font-size: 24px;">კვირას გექნებათ ტესტირება</span></li>
     </ul>
 
     <hr>
@@ -36,7 +39,6 @@
         <p style="color: orange;">დავალებების პროგრესის <a href="https://docs.google.com/spreadsheets/d/14pomGTdsV_lfPtx34fR9KYht20NIBZr6SMxQcQKZk_I/edit?usp=sharing" target="_blank">ლინკი</a></p>
         <p style="color: rgb(32, 134, 23);">შეხვედრების ვიდეო ჩანაწერების <a href="https://drive.google.com/drive/folders/1ggz3KFXW4qLz8gFwzMLh_KMSJycfmHh0?usp=sharing" target="_blank">ლინკი</a></p>
         <p style="color: rgb(30, 7, 114);">გაკვეთილზე ნახსენები აიქონების ლინკი <a href="https://icons8.com/" target="_blank">ლინკი</a></p>
-        
     </div>
 
 </body>
