--- a/davaleba-10/დავალება10--for04.07.html
+++ b/davaleba-10/დავალება10--for04.07.html
@@ -38,7 +38,7 @@
         <p style="color: orangered;">საკლასო სამუშაოების <a href="https://github.com/nino207/pythagora_MJ" target="_blank">ლინკი</a></p>
         <p style="color: orange;">დავალებების პროგრესის <a href="https://docs.google.com/spreadsheets/d/14pomGTdsV_lfPtx34fR9KYht20NIBZr6SMxQcQKZk_I/edit?usp=sharing" target="_blank">ლინკი</a></p>
         <p style="color: rgb(32, 134, 23);">შეხვედრების ვიდეო ჩანაწერების <a href="https://drive.google.com/drive/folders/1ggz3KFXW4qLz8gFwzMLh_KMSJycfmHh0?usp=sharing" target="_blank">ლინკი</a></p>
-        <p style="color: rgb(30, 7, 114);">გაკვეთილზე ნახსენები აიქონების ლინკი <a href="https://icons8.com/" target="_blank">ლინკი</a></p>
+        <p style="color: rgb(30, 7, 114);">გაკვეთილზე ნახსენები აიქონების <a href="https://icons8.com/" target="_blank">ლინკი</a></p>
     </div>
 
 </body>
